--- a/css/style.css
+++ b/css/style.css
@@ -692,7 +692,7 @@ p {
     color: #FFFFFF;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 700;
 }
 
@@ -1093,6 +1093,7 @@ p{
 .quote{
     font-size: 2.5rem;
     max-width: 50ch;
+    color: black;
 }
 
 .quote__sign{
