--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,11 @@ nav .caret {
     margin-bottom: 20px;
 }
 
+.mg-tp {
+    margin-top: 24px;
+    margin-bottom: 15px;
+}
+
 .mg-lg {
     margin-top: 10px;
     margin-bottom: 40px;
@@ -584,10 +589,8 @@ a[data-lightbox]:hover img {
     padding: 20px;
     color: #FFF;
     background: rgba(0, 0, 0, .5);
-    position: absolute;
-    left: 15px;
-    right: 15px;
-    bottom: 5px;
+    position: relative;
+    text-align: center;
 }
 
 .close-lightbox {
@@ -744,7 +747,7 @@ h4 {
 }
 
 .portfolio-thumb {
-    margin-bottom: 24px;
+    margin-bottom: 0px;
 }
 
 .portfolio-row {
@@ -1050,6 +1053,7 @@ h4 {
 /* contrast fixes */
 
 .nav-link{
+    color: black!important;
     font-size: 1.8rem;
     font-weight: 600;
 }
@@ -1101,8 +1105,9 @@ p{
 }
 
 .quote{
+    margin: 0 auto;
     font-size: 2.5rem;
-    max-width: 50ch;
+    max-width: 48ch;
     color: black;
 }
 
@@ -1159,6 +1164,12 @@ a{
 .font-700{
     font-weight: 700;
 }
+
+.focused:focus{
+    border: 8px solid #d1604a;
+    height: 270px;
+}
+
 
 
 @media (max-width: 767px){
