--- a/css/style.css
+++ b/css/style.css
@@ -857,13 +857,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -881,10 +881,7 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
+    
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -893,8 +890,6 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
     }
 }
 
@@ -1157,7 +1152,7 @@ a{
     font-size: 2.1rem;
 }
 .bot-container{
-    width: 60ch;
+    max-width: 60ch;
     margin: 0 auto;
 }
 
@@ -1165,15 +1160,21 @@ a{
     font-weight: 700;
 }
 
-.focused:focus{
+.focused:focus > img{
     border: 8px solid #d1604a;
     height: 270px;
 }
 
 
 
+
 @media (max-width: 767px){
+
     .img-responsive{
         margin: 0 auto;
+    }
+
+    .pad-bot{
+        padding-bottom: 20px;
     }
 }
