--- a/css/style.css
+++ b/css/style.css
@@ -1054,7 +1054,7 @@ h4 {
 }
 
 .bg-contrast{
-    background-color: hsla(19, 85%, 69%, .80);
+    background-color: rgba(246, 243, 242, 0.8);
     padding: 20px 10px;
     position: relative;
     z-index: 100;
@@ -1068,13 +1068,11 @@ h4 {
     z-index: 100;
 }
 
-.text-contrast{
+.text-contrast-light{
     color: #F3B196;
 }
 
-.rounded{
-    border-radius: 100px;
-}
+
 
 .title{
     font-size: 2.5rem;
@@ -1083,7 +1081,7 @@ h4 {
 }
 
 .bgc-black{
-    background-color: #303030;
+    background-color: #2B2B2B;
     padding: 20px;
 }
 
@@ -1125,20 +1123,15 @@ a{
 }
 
 .adress-container{
-    color: black;
     text-align: center;
-    margin-top: 8rem;
     line-height: 6rem;
-    background-color: #303030;
     padding: 60px 0;
-    border-radius: 15px;
-    border: 2px solid #F3B196;
 }
 
 .adress-text{
     font-size: 2.5rem;
     font-weight: 500;
-    color: #F3B196;
+    color: #000000;
 }
 
 .link-contrast{
