--- a/css/style.css
+++ b/css/style.css
@@ -1055,7 +1055,7 @@ h4 {
 
 .bg-contrast{
     background-color: rgba(246, 243, 242, 0.8);
-    padding: 20px 10px;
+    padding: 10px 0;
     position: relative;
     z-index: 100;
 }
@@ -1083,6 +1083,14 @@ h4 {
 .bgc-black{
     background-color: #2B2B2B;
     padding: 20px;
+}
+
+.logo{
+    margin-bottom: 20px;
+}
+
+h1{
+    margin: 0;
 }
 
 h2{
@@ -1144,7 +1152,21 @@ a{
     color: #F3B196;
     font-size: 2.1rem;
 }
+
+.title-container{
+    max-width: 60ch;
+    margin: 0 auto;
+}
+
+.contact-container{
+    max-width: 80ch;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+
 .bot-container{
+    position: relative;
+    z-index: 10;
     max-width: 60ch;
     margin: 0 auto;
 }
